@@ -188,6 +188,7 @@ tiberium-molten-processing=Molten Tiberium Processing
 tiberium-energy-weapons-damage=Tiberium Ionization Principles
 tiberium-explosives=Tiberium Explosive Techniques
 tiberium-military=Tiberium Military
+tiberium-artillery=Tiberium Artillery
 tiberium-containment-tech=Tiberium Containment
 tiberium-growth-acceleration-acceleration=Growth Acceleration Improvement
 tiberium-control-network-speed=Tiberium Control Network Power
@@ -237,6 +238,7 @@ tiberium-growth-acceleration-acceleration-effect=Growth Accelerator speed: __1__
 tiberium-control-network-speed-effect=Tiberium Control Network speed bonus: __1__\nTiberium Control Network power consumption: __2__
 tiberium-refining-blue=This potent variant of Tiberium occurs rarely in the wild, but consumes Green Tiberium as it spreads. We found ways to refine it into explosives and pure liquid Tiberium.
 tiberium-rocketry=Wait, you researched all of that military technology and your turrets still only fire bullets?
+tiberium-artillery=New initiative for artillery to go green...by packing a Tiberium payload. Pepper the landscape with more Tiberium ore.
 tiberium-nuke=Creating the ultimate Tiberium missiles that do the two things Tiberium excels at: making more Tiberium and destroying anything that isn't Tiberium.
 tiberium-ore-destruction=Using sonic resonance we can shatter Tiberium ore to quickly reclaim land. Just don't breathe in the air for a while.
 
